--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
+    "nodemon": "^3.1.10",
     "pg": "^8.16.0",
     "stripe": "^18.2.1"
   }
