--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,24 @@
-DATABASE_URL=postgres://user:pass@localhost:5432/scouts
-JWT_SECRET=your_jwt_secret
-STRIPE_SECRET_KEY=sk_test_yourkey
-STRIPE_WEBHOOK_SECRET=whsec_yoursecret
+# PORT: Le port sur lequel votre serveur backend écoute.
+PORT=3000
+
+# DATABASE_URL: URL de connexion à la base de données PostgreSQL.
+# Format: postgres://<utilisateur>:<motdepasse>@<hôte>:<port>/<nom_base>
+DATABASE_URL=postgres://postgres:1234@localhost:5432/scout_bdd
+
+# JWT_SECRET: Clé secrète utilisée pour signer les tokens JWT.
+JWT_SECRET=your_jwt_secret_here
+
+# STRIPE_SECRET_KEY: Clé secrète Stripe pour les paiements (backend).
+STRIPE_SECRET_KEY=your_stripe_secret_key_here
+
+# STRIPE_PUBLISHABLE_KEY: Clé publique Stripe pour le frontend.
+STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key_here
+
+# STRIPE_WEBHOOK_SECRET: Clé secrète pour vérifier les webhooks Stripe.
+STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret_here
+
+# FRONT_URL: URL du frontend de l'application.
 FRONT_URL=http://localhost:3000
-COMMISSION_RATE=0.1
+
+# COMMISSION_RATE: Taux de commission appliqué (ex: 0.20 pour 20%).
+COMMISSION_RATE=0.20
